removing artifactory prefix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   elasticsearch:
-    image: artifactory:8080/docker-virtual/elasticsearch:7.3.0
+    image: elasticsearch:7.3.0
     container_name: elasticsearch
     environment:
       - node.name=elasticsearch
@@ -18,14 +18,14 @@ services:
     volumes:
       - esdata1:/usr/share/elasticsearch/data
     ports:
-      - "YOUR_IP:8080:9200"
+      - "9200:9200"
   kibana:
-    image: artifactory:8080/docker-virtual/kibana:7.3.0
+    image: kibana:7.3.0
     container_name: kibana
     environment:
       ELASTICSEARCH_URL: "http://elasticsearch:9200"
     ports:
-      - "YOUR_IP:80:5601"
+      - "5601:5601"
     depends_on:
       - elasticsearch
 volumes:
